# encit

./: Cargo.toml  LICENSE  README.md  build.rs
.github/actions-rs/: grcov.yml
.github/workflows/: build_and_check.yml  code_coverage.yml
src/: config.rs  enc.rs  errors.rs  main.rs
src/api/: enc.rs  friends.rs  identities.rs  mod.rs  server.rs
src/cmd/: add_cmd.rs  add_friend_cmd.rs  add_identity_cmd.rs  decrypt_cmd.rs  encrypt_cmd.rs  get_friends_cmd.rs  get_identities_cmd.rs  get_identity_cmd.rs  mod.rs  new_identity_cmd.rs  reader.rs  root_cmd.rs  web_cmd.rs
web/: README.md  package.json
web/src/: index.html  styles.scss
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
web/src/app/common/: error.service.ts
web/src/app/common/error-dialog/: error-dialog.component.html  error-dialog.component.scss  error-dialog.component.ts
web/src/app/encrypt/: encrypt.service.ts
web/src/app/encrypt/decrypt/: decrypt.component.html  decrypt.component.scss  decrypt.component.spec.ts  decrypt.component.ts
web/src/app/encrypt/encrypt/: encrypt.component.html  encrypt.component.scss  encrypt.component.ts
web/src/app/friends/: friend.service.spec.ts  friend.service.ts
web/src/app/friends/add-friend/: add-friend.component.html  add-friend.component.scss  add-friend.component.spec.ts  add-friend.component.ts
web/src/app/friends/friend-select/: friend-select.component.html  friend-select.component.spec.ts  friend-select.component.ts
web/src/app/friends/friends/: friends.component.html  friends.component.spec.ts  friends.component.ts
web/src/app/identities/: identity.service.ts
web/src/app/identities/identities/: identities.component.html  identities.component.scss  identities.component.spec.ts  identities.component.ts
web/src/app/identities/identity-select/: identity-select.component.html  identity-select.component.spec.ts  identity-select.component.ts
web/src/app/identities/new-identity/: new-identity.component.html  new-identity.component.spec.ts  new-identity.component.ts
