[package]
name = "encit"
version = "0.1.0"
edition = "2021"
authors = ["n3wtron@gmail.com"]
description = "E2E Offlline encryption CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
clap = "2"
openssl = "0.10.38"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.72"
thiserror = "1.0.30"
tempfile="3.2.0"
base64 = "0.13.0"
dirs = "4.0.0"
josekit = "0.7.4"
log = "0.4.14"
env_logger = "0.9.0"
hex = "0.4.3"

[dev-dependencies]
indoc = "1.0.3"
mockall = "0.10.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[package.metadata.deb]
license-file = ["LICENSE", "0"]
section = "utility"
